<resources>
    <string name="app_name">Teacher Connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_teacher_connection">Welcome to Teacher Connection!</string>
    <string name="please_login_or_register">please LOGIN or register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_username_and_password">Please enter username and password</string>
    <string name="username">username</string>
    <string name="password1">password</string>
    <string name="email">email</string>
    <string name="log_out">Log Out</string>
    <string name="account_setting">Account Setting</string>
    <string name="home">Home</string>
    <string name="menuaccountsetting">menuAccountSetting</string>
    <string name="my_connections">My Connections</string>
</resources>
